# medicano-project

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
apps/api/: package.json  tsconfig.json
apps/web/: package.json
backend/: index.ts  tsconfig.json
documentation/: main.tex
documentation/chapters/: 01-introduction.tex  02-theoretical-background.tex  03-methodology.tex  04-specification.tex  05-architecture.tex  06-schedule.tex  07-risks.tex  08-conclusion.tex
documentation/config/: colors.tex  metadata.tex  packages.tex  styles.tex
front/: index.html  tsconfig.json
front/src/: App.tsx  (+1 more)
medicano_crew/: .gitignore  pyproject.toml  requirements.txt  run_sprint.py  setup.ps1  setup.sh
medicano_crew/docs/: CONVENTIONS.md  REVIEW_GUIDE.md
medicano_crew/docs/specs/: feature-registry.md  sprint-01-auth.md  sprint-01-prompts.json  sprint-02-prompts.json  sprint-02-rbac.md  sprint-03-appointments.md  sprint-03-prompts.json  sprint-04-prompts.json  sprint-04-subscriptions.md  sprint-05-chat.md  sprint-05-prompts.json  sprint-06-enrichment.md  sprint-06-prompts.json  sprint-07-prompts.json  sprint-07-triage.md  sprint-08-availability.md  sprint-08-prompts.json  sprint-09-patient-scheduling.md  sprint-09-prompts.json
medicano_crew/src/medicano_crew/: main.py
medicano_crew/src/medicano_crew/crews/content_crew/: content_crew.py
medicano_crew/src/medicano_crew/crews/content_crew/config/: agents.yaml  tasks.yaml
scripts/: generate-insomnia-workspace.py  medicano-api.insomnia_collection.json
(+151 files in other folders)
