[project]
name = "medicano_crew"
version = "0.1.0"
description = "medicano-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.14.2",
]

[project.scripts]
kickoff = "medicano_crew.main:kickoff"
run_crew = "medicano_crew.main:kickoff"
plot = "medicano_crew.main:plot"
run_with_trigger = "medicano_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
